--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wernfried/node-minify-all-js"
+    "url": "git+https://github.com/wernfried/node-minify-all-js.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
